--- a/MazeGame/Views/Settings.html
+++ b/MazeGame/Views/Settings.html
@@ -11,7 +11,7 @@
         <div class="navigationbar"></div>
 
         <div class="w3-display-container w3-padding-32">
-            <div class="w3-card-4 w3-center w3-display-middle" style="width: 30%; height: 50%">
+            <div class="w3-card-4 w3-center w3-display-middle" style="width: 40%; height: 50%">
 
                 <div class="w3-container w3-black"><h1>Settings</h1></div>
 
@@ -37,7 +37,7 @@
                         </div>
                         <!--Submit button-->
                         <div class="w3-padding-16">
-                            <input type="submit" name="saveSettings-submit" id="saveSettings-submit" class="w3-button w3-gray w3-hover-green w3-round-xlarge" value="Save">
+                            <input type="submit" name="saveSettings-submit" id="saveSettings-submit" class="w3-button w3-green w3-round-xlarge" value="Save">
                         </div>
 
                     </form>
