--- a/MazeGame/Views/UserRankings.html
+++ b/MazeGame/Views/UserRankings.html
@@ -13,7 +13,7 @@
     <div class="w3-container w3-padding-32">
         <div class="w3-card-4">
             
-            <div class="w3-container w3-black"><h2>Rank Table</h2></div>
+            <div class="w3-container w3-black w3-center"><h2>Rank Table</h2></div>
 
             <table class="w3-table-all w3-centered">
                 <!-- first static row -->
