fix the prev prob with single game

--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title>Single Player Game</title>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
 </head>
 <body>
 
     <div class="w3-container">
 
         <div class="navigationbar"></div>
-        
+
         <div class="w3-container w3-black w3-margin w3-center"><h1>Single Player Game</h1></div>
-        
+
         <div class="w3-display-container w3-margin">
             <div style="width: 30%; float: left" class="w3-center">
                 <fieldset class="w3-border-0">
@@ -33,7 +33,7 @@
                         </div>
                         <!--Start button-->
                         <div class="w3-padding-16">
-                            <button type="submit" id="startGame" class="w3-button w3-round-xlarge w3-green">Start New Game</button>
+                            <button type="button" id="startGame" class="w3-button w3-round-xlarge w3-green">Start New Game</button>
                         </div>
 
                         <!--Search algo-->
@@ -46,7 +46,7 @@
                         </div>
                         <!--Solve button-->
                         <div class="w3-padding-16">
-                            <button type="submit" id="solveGame" class="w3-button w3-round-xlarge w3-green">Solve</button>
+                            <button type="button" id="solveGame" class="w3-button w3-round-xlarge w3-green">Solve</button>
                         </div>
                     </form>
                 </fieldset>
@@ -57,16 +57,16 @@
         </div>
 
     </div>
-    
 
-<script src="../Scripts/jquery-3.2.1.js"></script>
-<script src="../Scripts/knockout-3.4.2.js"></script>
-<script src="../Scripts/navbar.js"></script>
-<link href="../Scripts/css/W3.css" rel="stylesheet"/>
-<link href="../Scripts/css/navbar.css" rel="stylesheet">
-<script src="../Scripts/JQuery.mazeBoard.js"></script>
-<script src="../Scripts/startSingleGame.js"></script>
-<script src="../Scripts/solveMaze.js"></script>
+
+    <script src="../Scripts/jquery-3.2.1.js"></script>
+    <script src="../Scripts/knockout-3.4.2.js"></script>
+    <script src="../Scripts/navbar.js"></script>
+    <link href="../Scripts/css/W3.css" rel="stylesheet" />
+    <link href="../Scripts/css/navbar.css" rel="stylesheet">
+    <script src="../Scripts/JQuery.mazeBoard.js"></script>
+    <script src="../Scripts/startSingleGame.js"></script>
+    <script src="../Scripts/solveMaze.js"></script>
 
 </body>
 </html>
