--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <script src="../Scripts/jquery.signalR-2.2.2.js"></script>
     <script src="../signalr/hubs"></script>
-    <script src="../Scripts/jquery-3.2.1.js"></script>
+    <!--<script src="../Scripts/jquery-3.2.1.js"></script>-->
     <script src="../Scripts/MultiplayerGame.js"></script>
 
     <script src="../bootstrap/js/bootstrap.min.js"></script>
