list games select

--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -26,13 +26,13 @@
         <div class="col-sm-3 form-horizontal">
             <!--games dropdown-->
             <div class="form-group">
+
                 <label for="games" class="col-sm-3 control-label">Games</label>
                 <div class="col-sm-6">
                     <div class="dropdown" id="dropdown-games">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="btn-menu" data-toggle="dropdown">
-                            Games  <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" id="dropdown" role="menu" aria-labelledby="menu1"></ul>
+                        <select class="btn btn-default dropdown-toggle" type="button" id="dropdown" data-toggle="dropdown">
+                            Games
+                        </select>
                     </div>
                 </div>
             </div>
