--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -10,7 +10,7 @@
 
         <div class="navigationbar"></div>
         
-        <img id="playerImg" style="display: none"/>
+        <img id="Images/minion.gif" style="display: none"/>
         <img id="exitImg" style="display: none"/>
 
         <div class="w3-container w3-black w3-margin w3-center"><h1>Single Player Game</h1></div>
