--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -18,9 +18,13 @@
     <script src="../Scripts/MultiplayerGame.js"></script>
 
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <!--<script src="../Scripts/navbar.js"></script>-->
+<!--<script src="../Scripts/navbar.js"></script>-->
+    
+<img id="Images/minion.gif" style="display: none"/>
+<img id="Images/pokemon.gif" style="display: none"/>
+<img id="exitImg" style="display: none"/>
 
-    <div class="container body-content">
+<div class="container body-content">
         <!--<div class="navigationbar"></div>-->
         <div class="page-header"><h2>Multiplayer Game</h2></div>
         <div class="col-sm-3 form-horizontal">
