fixed problem with imgs

--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -55,6 +55,9 @@
                 <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500" style="border:2px solid #000000;"></canvas>
             </div>
         </div>
+        
+        <img id="playerImg" src="Images/minion.gif" style="display: none"/>
+        <img id="exitImg" src="Images/Exit.png" style="display: none"/>
 
     </div>
 
