--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -90,6 +90,11 @@
                 <canvas id="competitorCanvas" tabindex="2" class="maze-board" width="400" height="400" style="border:2px solid #000000;"></canvas>
             </div>
         </div>
+        
+        <img id="playerImg" src="Images/minion.gif" style="display: none" />
+        <img id="exitImg" src="Images/Exit.png" style="display: none" />
+        <img id="competitorImg" src="Images/pokemon.gif" style="display: none"/>
+
     </div>
 
 </body>
