--- a/MazeGame/Views/LearnMore.html
+++ b/MazeGame/Views/LearnMore.html
@@ -1,11 +1,34 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Learn More</title>
 	<meta charset="utf-8" />
 </head>
 <body>
-    <h2>Hello Eden</h2>
+
+<div class="w3-container">
+    
+    <div class="navigationbar"></div>
+
+    <div class="w3-container w3-padding-32 w3-center" style="margin-left: 200px; margin-right: 200px">
+        <div class="w3-container w3-black"><h1 class="w3-wide">About</h1></div>
+        <div class="w3-container w3-light-gray">
+            <div class="w3-padding-32">
+                <h3>It is all about solving mazes.<Br>What did you expect for?
+                    <br/>
+                    <br/>But, congrats for entering this page!
+                    <br/>It means you do your job well
+                </h3>
+            </div>
+        </div>
+    </div>
+
+</div>
+    
+    <script src="../Scripts/jquery-3.2.1.js"></script>
+    <script src="../Scripts/navbar.js"></script>
+    <link href="../Scripts/css/W3.css" rel="stylesheet" />
+    <link href="../Scripts/css/navbar.css" rel="stylesheet">
 
 </body>
 </html>
