--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -52,7 +52,8 @@
                 </fieldset>
             </div>
             <div style="width: 70%; float: right">
-                <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500" style="border:2px solid #000000;"></canvas>
+                <div class="loader" ></div>
+                <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500" style="border: 2px solid #000000;"></canvas>
             </div>
         </div>
         
@@ -70,6 +71,7 @@
     <script src="../Scripts/JQuery.mazeBoard.js"></script>
     <script src="../Scripts/startSingleGame.js"></script>
     <script src="../Scripts/solveMaze.js"></script>
+    <link href="../Scripts/css/loader.css" rel="stylesheet"/>
 
 </body>
 </html>
