loader in single

--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -51,9 +51,11 @@
                     </form>
                 </fieldset>
             </div>
-            <div style="width: 70%; float: right">
-                <div class="loader" ></div>
-                <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500" style="border: 2px solid #000000;"></canvas>
+            <div>
+                <div id="loader" style="display: none; float: left"></div>
+                <div style="width: 70%; float: right">
+                    <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500" style="border: 2px solid #000000;"></canvas>
+                </div>
             </div>
         </div>
         
