--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -70,6 +70,7 @@
                     <button type="submit" id="startGame" class="btn btn-default">Start Game</button>
                 </div>
             </div>
+            <div id="loader" style="display: none"></div>
         </div>
         <!--canvas-->
         <div class="col-sm-9 text-center">
@@ -98,6 +99,7 @@
 
     <script src="../bootstrap/js/bootstrap.min.js"></script>
     <!--<script src="../Scripts/navbar.js"></script>-->
+    <link href="../Scripts/css/loader.css" rel="stylesheet"/>
 
 </body>
 </html>
