--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -5,23 +5,20 @@
     <meta charset="utf-8" />
     <!-- Bootstrap core CSS -->
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <!--<link href="../Scripts/navbar.css" rel="stylesheet">-->
 </head>
 <body>
 
 <div class="container body-content">
-        <!--<div class="navigationbar"></div>-->
+        <div class="navigationbar"></div>
         <div class="page-header"><h2>Multiplayer Game</h2></div>
         <div class="col-sm-3 form-horizontal">
             <!--games dropdown-->
             <div class="form-group">
-
-                <label for="games" class="col-sm-3 control-label">Games</label>
+                <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <div class="dropdown" id="dropdown-games">
                         <select class="btn btn-default dropdown-toggle" type="button" id="dropdown" data-toggle="dropdown">
-                            Games
+                            <option selected disabled>Games &dArr;</option>
                         </select>
                     </div>
                 </div>
@@ -93,12 +90,12 @@
     <script src="../Scripts/knockout-3.4.2.js"></script>
     <script src="../Scripts/jquery.signalR-2.2.2.js"></script>
     <script src="../signalr/hubs"></script>
-    <script src="../Scripts/JQuery.mazeBoard.js"></script>
-    <!--<script src="../Scripts/jquery-3.2.1.js"></script>-->
-    <script src="../Scripts/MultiplayerGame.js"></script>
-
+    <script src="../Scripts/navbar.js"></script>
+    <link href="../Scripts/css/navbar.css" rel="stylesheet">
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-    <!--<script src="../Scripts/navbar.js"></script>-->
+    <link href="../Scripts/css/W3.css" rel="stylesheet" />
+    <script src="../Scripts/JQuery.mazeBoard.js"></script>
+    <script src="../Scripts/MultiplayerGame.js"></script>
     <link href="../Scripts/css/loader.css" rel="stylesheet"/>
 
 </body>
